# rock_python

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: get_random_pos.py  play_game.py
src/: CMakeLists.txt  python_bindings.cpp
